--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -19,8 +19,9 @@
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a href="feed.html">FEED</a></li>
+          <li><a href="feed.html">FEED</a></li>
           <li><a href="signin.html">MEU PERFIL</a></li>
+          <li><a href="adicionarreceita.html">Adicionar Receita</a></li>
           </ul>
         </nav>
       </header>
