--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -39,7 +39,7 @@
         <div id="tela"></div>
     </section>
 
-        <footer>
+        <footer id="roda">
             <ul class="foot-list">
                 <li>OUTRAS PÁGINAS</li>
                 <li><a href="sobrenos.html">Sobre Nós</a></li>
