--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -46,7 +46,7 @@
                 <li><a href="https://www.pucminas.br/destaques/Paginas/default.aspx">Portal PUC Minas</a></li>
             </ul>
 
-              <img id="puc" src="images/logopuc.png" alt="Não foi possível carregar a imagem.">
+              <img id="puc" src="logopuc.png" alt="Não foi possível carregar a imagem.">
         </footer>
 
         <script src="js/navbar.js"></script>
